twotier/templates/tx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tx-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tx
  template:
    metadata:
      labels:
        app: tx
    spec:
      containers:
      - name: tx
        image: twoTierAcr.azurecr.io/tx-service:1.0
        ports:
        - containerPort: 4000
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: tx-service
spec:
  type: ClusterIP
  selector:
    app: tx
  ports:
    - port: 80
      targetPort: 4000
