twotier/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: two-tier-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: yourapp.contoso.com
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: tx-service
            port:
              number: 80
